add_subdirectory(abstractsettings)
add_subdirectory(downloadmanager)
add_subdirectory(downloadengine)
add_subdirectory(fileutils)
add_subdirectory(format)
add_subdirectory(mask)
add_subdirectory(regex)
add_subdirectory(resourceitem)
add_subdirectory(stream)
add_subdirectory(torrentbasecontext)
add_subdirectory(torrentcontext)
add_subdirectory(updatechecker)
